[package]
name = "proje"
description = "TÜBİTAK Projesi"
authors = [ "RGBCube" ]
repository = "https://github.com/RGBCube/NamelessProje"
license = "GPL"
version = "0.0.1"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
maud      = { version = "0.25.0", features = [ "actix-web" ] }
serde     = { version = "1.0.192", features = [ "derive" ] }
sqlx      = { version = "0.7.3", features = ["sqlite"] }
tokio     = { version = "1.34.0", features = [ "full" ] }

[profile.dev]
incremental = true
