[package]
name        = "gdus"
description = "TÜBİTAK Projesi"
authors     = [ "RGBCube" ]
repository  = "https://github.com/RGBCube/GDUS"
license     = "GPL"
version     = "0.0.1"
edition     = "2021"

[dependencies]
actix-cors = "0.6.5"
actix-web  = "4.4.0"
chrono     = "0.4.31"
maud       = { version = "0.25.0", features = [ "actix-web" ] }
serde      = { version = "1.0.192", features = [ "derive" ] }
sqlx       = { version = "0.7.4", features = [ "chrono", "sqlite", "runtime-tokio" ] }
tokio      = { version = "1.34.0", features = [ "full" ] }

[profile.dev]
incremental = true
